data/derived/sp14/progs/unify/prog3854.ml.out
Characters 44-45:
  if length xs = 0 then 0;;
                        ^
Error: This expression has type int but an expression was expected of type
         unit
